--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,8 +40,10 @@ android {
 dependencies {
     implementation "com.squareup.retrofit2:converter-scalars:2.9.0" //get rid of this soon
     implementation "com.squareup.retrofit2:retrofit:2.9.0"
+    implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
     implementation "com.squareup.moshi:moshi-kotlin:1.11.0"
     implementation "com.squareup.retrofit2:converter-moshi:2.9.0"
+    implementation "com.squareup.okhttp3:logging-interceptor:4.5.0"
     implementation 'androidx.navigation:navigation-fragment-ktx:2.3.1'
     implementation 'androidx.navigation:navigation-ui-ktx:2.3.1'
     implementation "androidx.fragment:fragment-ktx:1.3.0-beta02"
